--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,7 +9,10 @@
    <link rel="stylesheet" href="{% static 'css/blog.css' %}"> 
 </head> 
 <body> 
-    <div class="page-header"> 
+    <div class="page-header">
+        {% if user.is_authenticated %}
+	    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+	{% endif %}
 	<h1><a href="/">Blog</a></h1> 
     </div> 
     <div class="content container"> 
@@ -20,6 +23,5 @@
 	       </div> 
 	</div> 
     </div>
-
 </body> 
 </html>
